--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Terraform Azure VM for RAN-Connect PoC
+name: Testing GitHub Actions Variables
 
 on:
   workflow_dispatch:
@@ -22,6 +22,7 @@ jobs:
         env:
           step_var: ${{ vars.step_var }}
         run: |
+          echo env
           echo "workflow_var: $workflow_var
           echo "job_var: $job_var"
-          echo "step_var: $step_var
+          echo "step_var: $step_var"
