--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
         env:
           step_var: ${{ vars.step_var }}
         run: |
-          echo $ENV
+          env
           echo "workflow_var: $workflow_var"
           echo "job_var: $job_var"
           echo "step_var: $step_var"
